--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,13 @@ name: ecologic-computing
 channels:
   - conda-forge
 dependencies:
+  - python=3.11
   - numpy
+  - psutil
+  - toolz
   - matplotlib
+  - dill
   - pandas
+  - partd
+  - bokeh
+  - dask
